fix(css): use visibility instead of opacity

--- a/src/css/bs-stepper.css
+++ b/src/css/bs-stepper.css
@@ -67,7 +67,7 @@
 }
 
 .bs-stepper.vertical .content.fade.dstepper-none {
-  display: inherit;
+  visibility: hidden;
 }
 
 .bs-stepper .content:not(.fade) {
@@ -79,19 +79,23 @@
 }
 
 .bs-stepper .content.fade {
-  opacity: 0;
+  visibility: hidden;
   transition-duration: .3s;
   transition-property: opacity;
 }
 
 .bs-stepper.vertical .content {
-  opacity: 0;
+  visibility: hidden;
   display: inherit;
 }
 
-.bs-stepper .content.fade.active,
-.bs-stepper.vertical .content.active {
+.bs-stepper .content.fade.active {
+  visibility: visible;
   opacity: 1;
+}
+
+.bs-stepper.vertical .content.active {
+  visibility: visible;
 }
 
 .bs-stepper .bs-stepper-circle {
@@ -167,16 +171,13 @@
     margin-left: auto;
   }
 
-  .bs-stepper:not(.vertical) .content.active,
-  .bs-stepper:not(.vertical) .content:not(.active) {
-    display: inherit;
+  .bs-stepper:not(.vertical) .content.active {
+    visibility: visible;
   }
 
-  .bs-stepper:not(.vertical) .content:not(.fade):not(.active) {
-    opacity: 0;
-  }
-
-  .bs-stepper:not(.vertical) .content.active:not(.fade) {
-    opacity: 1;
+  .bs-stepper:not(.vertical) .content:not(.active),
+  .bs-stepper:not(.vertical) .content:not(.fade):not(.active)  {
+    visibility: hidden;
+    display: unset;
   }
 }
